--- a/sosun/docker-compose.yml
+++ b/sosun/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3.1'
+version: '3.8'
 
 services:
-  postgresql:
-    image: postgres
+  postgres:
+    image: postgres:13
     container_name: postgresql
     env_file:
       - env/.pg.env
@@ -11,16 +11,6 @@ services:
       - "5432:5432"
     volumes:
       - db:/var/lib/postgres
-
-  app:
-    depends_on:
-      - postgresql
-    build: .
-    restart: on-failure
-    env_file:
-      - env/.spring-pg.env
-    ports:
-      - "6969:6969"
 
 volumes:
   db:
