--- a/sosun/src/main/resources/application.properties
+++ b/sosun/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 jasypt.encryptor.algorithm=PBEWithMD5AndDES
 jasypt.encryptor.password=matta69
 
-spring.datasource.diver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/sosun
 spring.datasource.username=daycu
 spring.datasource.password=matta69
@@ -10,4 +10,3 @@ spring.datasource.password=matta69
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
