--- a/sosun/src/main/resources/application.properties
+++ b/sosun/src/main/resources/application.properties
@@ -2,6 +2,11 @@
 jasypt.encryptor.algorithm=PBEWithMD5AndDES
 jasypt.encryptor.password=matta69
 
+# Twilio
+twilio.sid=AC2c82189e9abffc2788ec8dac5537aaec
+twilio.auth.token=fc8a7caba89d162d60bc88ee678ac711
+twilio.number=+13253092418
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/sosun
 spring.datasource.username=daycu
