--- a/sosun/.gitignore
+++ b/sosun/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 !**/src/main/resources/
-env/
+env/*
 
 ### STS ###
 .apt_generated
@@ -33,3 +33,5 @@ build/
 
 ### VS Code ###
 .vscode/
+
+src/main/resources/*
