--- a/sosun/.gitignore
+++ b/sosun/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 !**/src/main/resources/
-env/*
+env/
 
 ### STS ###
 .apt_generated
@@ -34,4 +34,4 @@ build/
 ### VS Code ###
 .vscode/
 
-src/main/resources/*
+src/main/resources/
