added pgadmin and a makefile

--- a/backend/database/docker/Dockerfile
+++ b/backend/database/docker/Dockerfile
@@ -2,5 +2,5 @@ FROM openjdk:17.0.1-jdk-slim
 WORKDIR /database
 ARG JAR_FILE="database-0.0.1-SNAPSHOT.jar"
 COPY ${JAR_FILE} database.jar
-ENTRYPOINT [ "java" "-jar" "database.jar" ]
+ENTRYPOINT [ "java", "-jar", "database.jar" ]
 
