--- a/backend/database/docker/docker-compose.yml
+++ b/backend/database/docker/docker-compose.yml
@@ -17,9 +17,31 @@ services:
   postgres:
     image: postgres:latest
     container_name: postgres
+    restart: always
     environment:
+      - POSTGRES_DB=Contacts
       - POSTGRES_USER=${POSTGRES_USERNAME}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    volumes:
+      - postgres:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4:8.3
+    environment:
+      PGADMIN_DEFAULT_EMAIL: da@da.com
+      PGADMIN_DEFAULT_PASSWORD: password
+      PGADMIN_LISTEN_PORT: 80
+    restart: always
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    ports:
+      - 15432:80
+    depends_on:
+      - postgres
+
+volumes:
+  postgres:
+  pgadmin:
     
 
 
