--- a/backend/database/.gitignore
+++ b/backend/database/.gitignore
@@ -32,4 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-backend/database/src/main/resources/application.properties
+!**/src/main/resources/application.properties
+backend/database/docker/database-0.0.1-SNAPSHOT.jar
