--- a/backend/database/docker/docker-compose.yml
+++ b/backend/database/docker/docker-compose.yml
@@ -1,25 +1,26 @@
 version: '3'
 
 services:
-  app:
-    image: "database"
-    build:
-      context: .
-    container_name: database
-    depends_on:
-      - postgres
-    environment:
-      - SPRING_DATASOURCE_URL=${POSTGRES_URL}
-      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USERNAME}
-      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+#  app:
+#    image: 'database:latest'
+#    build:
+#      context: .
+#    container_name: database
+#    depends_on:
+#      - postgres
+#    environment:
+#      - SPRING_DATASOURCE_URL=${POSTGRES_URL}
+#      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USERNAME}
+#      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
+#      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+#      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
 
   postgres:
     image: postgres:latest
     container_name: postgres
     restart: always
     environment:
-      - POSTGRES_DB=Contacts
+      - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USERNAME}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
@@ -28,9 +29,9 @@ services:
   pgadmin:
     image: dpage/pgadmin4:8.3
     environment:
-      PGADMIN_DEFAULT_EMAIL: da@da.com
-      PGADMIN_DEFAULT_PASSWORD: password
-      PGADMIN_LISTEN_PORT: 80
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
+      - PGADMIN_LISTEN_PORT=${PGADMIN_LISTEN_PORT}
     restart: always
     volumes:
       - pgadmin:/var/lib/pgadmin
