--- a/backend/database/src/main/resources/application.properties
+++ b/backend/database/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/Contacts
-spring.datasource.username=compose-postgres
-spring.datasource.password=compose-postgres
+spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://postgres:5432/contacts
+spring.datasource.password=postgres
 spring.jpa.hibername.ddl.auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
