--- a/backend/contact-registry/pom.xml
+++ b/backend/contact-registry/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 
 	<groupId>de.service</groupId>
-	<artifactId>database</artifactId>
+	<artifactId>contact-registry</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>database</name>
+	<name>contact-registry</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -39,8 +39,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.13.0</version>
 				<configuration>
-				<source>17</source>
-				<target>17</target>
+					<source>17</source>
+					<target>17</target>		
 				</configuration>
 			</plugin>
 		</plugins>
