--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,7 +17,7 @@
   </properties>
 
   <modules>
-    <module>database</module>
+    <module>contact-registry</module>
   </modules>
 
   <dependencyManagement>
