--- a/backend/contact-registry/src/main/resources/application.properties
+++ b/backend/contact-registry/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://postgres:5432/contacts
+spring.datasource.url=jdbc:postgresql://localhost:5432/contacts
 spring.datasource.password=postgres
-spring.jpa.hibername.ddl.auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibername.format_sql=true
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
