--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,7 @@
 
   <modules>
     <module>contact-registry</module>
+    <module>file-uploader</module>
   </modules>
 
   <dependencyManagement>
