--- a/backend/file-uploader/src/main/resources/application.properties
+++ b/backend/file-uploader/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibername.format_sql=true
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 server.port=8081
+
+spring.servlet.multipart.max-file-size=25MB
+spring.servlet.multipart.max-request-size=25MB
