--- a/backend/contact-registry/src/main/resources/application.properties
+++ b/backend/contact-registry/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name=contact-registry
+server.port=8080
+
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/contacts
 spring.datasource.password=postgres
@@ -6,3 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibername.format_sql=true
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
