--- a/backend/eureka-server/pom.xml
+++ b/backend/eureka-server/pom.xml
@@ -9,10 +9,10 @@
 	</parent>
 
 	<groupId>de.service</groupId>
-	<artifactId>file-uploader</artifactId>
+	<artifactId>eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>file-uploader</name>
-	<description>file-uploader</description>
+	<name>eureka-server</name>
+	<description>eureka-server</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -21,7 +21,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 			<version>4.1.3</version>
 		</dependency>
 	</dependencies>
