--- a/backend/file-reader/pom.xml
+++ b/backend/file-reader/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>jackson-dataformat-yaml</artifactId>
 			<version>2.17.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.1.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
