--- a/backend/file-uploader/src/main/resources/application.properties
+++ b/backend/file-uploader/src/main/resources/application.properties
@@ -4,3 +4,8 @@ server.port=8081
 
 spring.servlet.multipart.max-file-size=25MB
 spring.servlet.multipart.max-request-size=25MB
+
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
